@@ -135,6 +135,7 @@ All (GUI):
 - Fixed incorrect layout width caching in wxHTML (Jeff Tupper).
 - wxHTML: preserve TAB characters when copying <pre> content to clipboard.
 - Set focus to wxCalendarCtrl when it is clicked.
+- Don't clear the list control when wxLC_[HV]RULES style is toggled.
 
 All (Unix):
 
